fixed issue with nabar shifting to the left when navigating to other page. Also made minor changes to spacing throught site and changes to hover effects.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 html {
     scroll-behavior: smooth;
-  
+    overflow-y:scroll;
   }
